  (fixes 7up exit bug). (RFB)

2014-05-09
- aes/gemgraf.c aes/gemgraf.h aes/gemoblib.c aes/gemwmlib.c desk/deskmain.c
  include/obdefs.h tools/erd.c: Code cleanup: fixup types of some TEDINFO
  fields. (RFB)
- aes/gemlib.h aes/gemwmlib.c: Initialise window name & info fields to
  empty strings. (RFB)

2014-05-18
- bios/blkdev.c bios/blkdev.h: Don't login a drive with a logical sector
  size too large for the buffers in the BCB chain. (RFB)

2014-05-21
- bdos/fsio.c: Code cleanup: use memcpy() instead of custom code. (RFB)

2014-05-22
- aes/optimize.c aes/optimize.h desk/deskdir.c desk/deskinf.c: Code
  cleanup: use new function inf_numset() to simplify code. (RFB)

2014-05-24
- desk/deskdir.c desk/deskdir.h desk/deskinf.c: Code cleanup: simplify
  args to d_doop(). (RFB)

2014-05-25
- desk/deskinf.c: Code cleanup: refactor inf_fifo(). (RFB)
- desk/deskdir.c: Code cleanup: don't assume OP_COUNT is zero. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskfun.c: Code cleanup: avoid
  unnecessary scans of pathname. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskfun.c desk/desksupp.c: Create
  last_separator() function to scan for last backslash in pathname. (RFB)

2014-05-26
- desk/deskinf.c: Small refactoring for tidyness & reduced code size. (RFB)
- desk/deskinf.c: Fix compiler warning. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskinf.c: Simplify d_doop() by
  using true recursion. (RFB)

2014-05-28
- desk/deskdir.c: Simplify d_dofcopy() for maintainability. (RFB)

2014-05-29
- include/config.h desk/* tools/erd.c: Code cleanup: remove conditionally
  compiled code for crippled desktop, since it is no longer used. (RFB)
- desk/deskdir.c: Eliminate blank_it(): it performs no useful function. (RFB)

2014-05-30
- desk/deskdir.c: TOS compatibility: always display file/folder countdown
  when copying/deleting. (RFB)
- desk/desk1.c desk/deskdir.c desk/deskdir.h desk/deskfun.c desk/deskfun.h:
  Code cleanup: remove no-longer-used args from dir_op(), fun_op(). (RFB)